--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,6 @@ body {
 }
 
 /****** Question ******/
-
 .question {
     display: none;
     width: 80px;
@@ -146,7 +145,7 @@ body {
     top: -200px;
     left: 300px; 
     opacity: 0;
-    transition: opacity 500ms ease-out 400ms;
+    transition: opacity 300ms ease-out 400ms;
 }
 
 .question:before {
@@ -189,11 +188,11 @@ body {
     position: absolute;
     left: 400px;
     top: 120px;
-    opacity: 0;
+    opacity: 0.08;
     transition: opacity 500ms ease-in 500ms;
 }
 
-.coface {
+.co-face {
     width: 180px;
     height: 142px;
     border: 1.5px solid var(--conyoutline);
@@ -201,7 +200,7 @@ body {
     background-color: var(--conycolor);
 }
 
-.coears {
+.co-ears {
     width: 30px;
     height: 70px;
     background-color: var(--conycolor);
@@ -214,7 +213,7 @@ body {
     z-index: -1;
 }
 
-.corightear {
+.co-rightear {
     position: relative;
     left: 95px;
     top: -143px;
@@ -222,7 +221,7 @@ body {
     z-index: -1;
 }
 
-.coinner {
+.co-inner {
     width: 22px;
     height: 65px;
     background-color: pink;
@@ -232,7 +231,7 @@ body {
     top: 4px;
 }
 
-.coightinner {
+.co-rightinner {
     width: 23px;
     height: 65px;
     background-color: pink;
@@ -242,7 +241,7 @@ body {
     top: 5px;
 }
 
-.conose {
+.co-nose {
     width: 15px;
     height: 10px;
     border: 2px solid var(--conyoutline);
@@ -252,7 +251,7 @@ body {
     top: -85px;
 }
 
-.cobridge {
+.co-bridge {
     border-left: 2.2px solid var(--conyoutline);
     border-radius: 3px;
     height: 15px;
@@ -261,7 +260,7 @@ body {
     top: 10px;
 }
 
-.conmouth {
+.co-mouth {
     width: 28px;
     height: 30px;
     border: 2.2px solid var(--conyoutline); 
@@ -272,7 +271,7 @@ body {
     top: 24px;   
 }
 
-.mouthinner {
+.mouth-inner {
     width: 24px;
     height: 24px;
     background-color: pink;
@@ -284,12 +283,12 @@ body {
     left:2px;
 }
 
-.cocheeks {
+.co-cheeks {
     margin: 0;
     padding: 0;
 }
 
-.cocheeks div {
+.co-cheeks div {
     display: inline-block;
     margin: 0 40px 0 0;
     background-color: pink;
@@ -301,12 +300,12 @@ body {
     top: -95px;
 }
 
-.coeyes ul {
+.co-eyes ul {
     margin: 0;
     padding: 0;
 }
 
-.coeyes ul li {
+.co-eyes ul li {
     display: inline-block;
     margin: 0 7px 0 0;
     width: 10px;
@@ -318,7 +317,7 @@ body {
     top: -155px;
 }
 
-/***** Love you part ******/
+/***** Message part ******/
 .love {
     margin: 0;
     padding: 0;
@@ -367,43 +366,7 @@ body {
     bottom: 30px;
 }
 
-.smallheart {
-    width: 20px;
-    height: 20px;
-    background-color: #ff3e3e;
-    opacity: 0.8;
-    transform: rotate(45deg);
-    position: absolute;
-    top: -90px;
-    left: 200px;
-}
-
-.smallheart:before, .smallheart:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: #ff3e3e;
-    border-radius: 100%;
-}
-
-.smallheart:before {
-    position: absolute;
-    top: -12px;
-}
-
-.smallheart:after {
-    position: absolute;
-    right: 12px;
-}
-
-/***** When brown's face is hovered
-        1. ? pops up
-        2. Cony shows up
-        3. "Love you"
-        4. Happy ever after
-****/
-
- 
+/* Hover effect */
 .face:hover  {
     transform: rotate(-10deg);
 }
@@ -414,4 +377,8 @@ body {
 
 .container:hover {
     opacity: 1;
+}
+
+footer {
+    text-align: center;
 }
