Style: Fix position relative and absolute.

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --maincolor: #6f4343;
     --conycolor: #fffff8;
     --conyoutline: #645e5e;
+    --conypink: rgba(255, 192, 203, 0.8)
 }
 
 @font-face {
@@ -12,7 +13,16 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body {
+    margin: 0;
     font-family: 'Baloo Tammudu';
 }
 
@@ -20,8 +30,9 @@ body {
 /****** Brown ******/
 .face {
     width: 190px;
-    height: 160px;
+    height: 155px;
     margin: 100px 0px 0px 100px;
+    position: relative;
     background-color: var(--maincolor);
     border-radius: 50%; 
     transition: 800ms ease-in;
@@ -32,16 +43,16 @@ body {
     height: 30px;
     background-color: var(--maincolor);
     border-radius: 50px 50px 0 0;
-    position: relative;
+    position: absolute;
     left: 25px;
     top: -10px;
     transform: rotate(-25deg);
 }
 
 .rightear {
-    position: relative;
+    position: absolute;
     left: 128px;
-    top: -41px;
+    top: -13px;
     transform: rotate(25deg);
 }
 
@@ -70,8 +81,8 @@ body {
     height: 65px;
     background-color: #fbe6dc;
     border-radius: 30px;
-    position: relative;
-    top: 10px;
+    position: absolute;
+    top: 65px;
     left: 70px;
 }
 
@@ -127,9 +138,12 @@ body {
     width: 15px;
     height: 15px;
     border-radius: 100%;
-    position: relative;
+    position: absolute;
     left: 78px;
-    top: -120px;
+}
+
+.eyes ul li:last-child {
+    left: 105px;
 }
 
 /****** Question ******/
@@ -200,45 +214,45 @@ body {
     background-color: var(--conycolor);
 }
 
+.co-ear-container {
+    position: relative;
+}
+
 .co-ears {
+    list-style: none;
     width: 30px;
     height: 70px;
     background-color: var(--conycolor);
     border: 1.5px solid var(--conyoutline);
     border-radius: 80% 80% 0 0;
-    position: relative;
-    left: 45px;
-    top: -68px;
-    transform: rotate(-10deg);
-    z-index: -1;
+    position: absolute;
+    left: 40px;
+    top: -81px;
+    transform: rotate(-8deg);
+    z-index: -2;
 }
 
-.co-rightear {
-    position: relative;
-    left: 95px;
-    top: -143px;
-    transform: rotate(7deg);
-    z-index: -1;
+.co-ears:last-child {
+    transform: rotate(8deg);
+    left: 100px;
 }
 
 .co-inner {
+    list-style: none;
     width: 22px;
     height: 65px;
-    background-color: pink;
+    background-color: var(--conypink);
     border-radius: 80% 80% 0 0;
     position: absolute;
-    left: 3px;
-    top: 4px;
+    left: 45px;
+    top: -73px;
+    transform: rotate(-8deg);
+    z-index: -1;
 }
 
-.co-rightinner {
-    width: 23px;
-    height: 65px;
-    background-color: pink;
-    border-radius: 80% 80% 0 0;
-    position: absolute;
-    left: 4px;
-    top: 5px;
+.co-inner:last-child {
+    transform: rotate(8deg);
+    left: 104px;
 }
 
 .co-nose {
@@ -246,9 +260,9 @@ body {
     height: 10px;
     border: 2px solid var(--conyoutline);
     border-radius: 80%;
-    position: relative;
+    position: absolute;
     left: 80px;
-    top: -85px;
+    top: 65px;
 }
 
 .co-bridge {
@@ -256,8 +270,8 @@ body {
     border-radius: 3px;
     height: 15px;
     position: absolute;
-    left: 6px;
-    top: 10px;
+    left: 4px;
+    top: 8px;
 }
 
 .co-mouth {
@@ -268,36 +282,35 @@ body {
     background-color: #f75a5a;
     position: absolute;
     left: -9px;
-    top: 24px;   
+    top: 23px;   
 }
 
 .mouth-inner {
-    width: 24px;
+    width: 22px;
     height: 24px;
-    background-color: pink;
-    border-radius: 15px 12px 12px 15px;
+    background-color: var(--conypink);
+    border-radius: 15px 13px 13px 15px;
     transform: rotate(90deg);
     opacity: 0.8;
     position: absolute;
-    top: 6px;
-    left:2px;
+    top: 2px;
+    left: 1px
 }
 
 .co-cheeks {
-    margin: 0;
-    padding: 0;
-}
-
-.co-cheeks div {
-    display: inline-block;
+    list-style: none;
     margin: 0 40px 0 0;
-    background-color: pink;
+    background-color: var(--conypink);
     width: 25px;
     height: 15px;
     border-radius: 80%;
-    position: relative;
-    left: 42px;
-    top: -95px;
+    position: absolute;
+    left: 35px;
+    top: 64px;
+}
+
+.co-cheeks:last-child {
+    left: 112px;
 }
 
 .co-eyes ul {
@@ -312,9 +325,13 @@ body {
     height: 10px;
     background-color: black;
     border-radius: 100%;
-    position: relative;
-    left: 73px;
-    top: -155px;
+    position: absolute;
+    left: 72px;
+    top: 54px;
+}
+
+.co-eyes ul li:last-child {
+    left: 92px;
 }
 
 /***** Message part ******/
@@ -382,4 +399,16 @@ body {
 footer {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+}
+
+
+/* Responsive Design */
+@media screen and (max-width: 680px) {
+
+    /* Brown */
+    .face {
+        margin: 100px 0px 0px 30px;
+    }
+
+
 }
